--- a/up.ioc
+++ b/up.ioc
@@ -1,12 +1,16 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_8
 ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,InjNumberOfConversion
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,InjNumberOfConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversion
 ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.Rank-2\#ChannelRegularConversion=2
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -37,9 +41,12 @@ Mcu.Pin1=PH1-OSC_OUT
 Mcu.Pin2=PA4
 Mcu.Pin3=PA5
 Mcu.Pin4=PA6
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin5=PA7
+Mcu.Pin6=PC4
+Mcu.Pin7=PB0
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.Pin9=VP_TIM3_VS_ClockSourceINT
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -63,6 +70,11 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Locked=true
 PA6.Signal=ADCx_IN6
+PA7.Locked=true
+PA7.Signal=GPIO_Output
+PB0.Signal=ADCx_IN8
+PC4.Locked=true
+PC4.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
@@ -90,7 +102,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
@@ -136,6 +148,8 @@ RCC.VCOOutputFreq_Value=300000000
 RCC.VcooutputI2S=150000000
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+SH.ADCx_IN8.ConfNb=1
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=10-1
 TIM3.Prescaler=15-1
